--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
             node-version: 12
     - uses: jaid/action-npm-install@v1.2.1
     - name: build react app
-      run: npm build
+      run: npm run build
     - name: installing surge
       run: npm install --global surge
     - name: deploying  build with surge   
